docs: adiciona README profissional com diagramas de pipeline, registradores e formatos do SIC/XE